examples/errors/parsing/not-no-body.cn
main : () [impure] =
  let x = not;
  ()
